# flmxmppd

./: Makefile.in  aclocal.m4  config.h.in  configure  configure.in
include/: Makefile  Makefile.in  conf.h  config.h  connection.h  connection_thread.h  listener.h  listener_thread.h
src/: Makefile.am  Makefile.in  conf.c  config.c  connection.c  connection_thread.c  listener.c  listener_thread.c  main.c
